<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#e24301">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:visibility="visible"
        android:layout_marginTop="-7sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="-10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <view
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="com.facebook.widget.ProfilePictureView"
                    android:id="@+id/profilepic"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5sp"
                    android:layout_marginTop="15sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/nameEditText"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:hint="@string/nameEditText"
                    android:textColorHint="#a3a2a2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Name"
                    android:id="@+id/profileNameTextView"
                    android:textColor="#ffffff"
                    style="@android:style/Widget.DeviceDefault.EditText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/mailEditText"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:hint="mail@mail.com"
                    android:textColorHint="#A3A2A2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="mail@mail.com"
                    android:id="@+id/profileEmailTextView"
                    android:textColor="#ffffff"
                    style="@android:style/Widget.DeviceDefault.EditText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/bioEditText"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:autoText="false"
                    android:hint="@string/bioHint"
                    android:textColorHint="#A3A2A2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Bio"
                    android:id="@+id/profileBioTextView"
                    android:textColor="#ffffff"
                    style="@android:style/Widget.DeviceDefault.EditText" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/offlineDivider"
                    android:id="@+id/profileOfflinePasswordTextView"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordEditText"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:labelFor="@+id/Password"
                    android:hint="@string/passwordHint"
                    android:textColorHint="#A3A2A2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/rePasswordEditText"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:hint="Repeat Password"
                    android:textColorHint="#A3A2A2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="30dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:id="@+id/submit"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>